--- a/public/stat120/lecture_notes/Day3.Rmd
+++ b/public/stat120/lecture_notes/Day3.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Simple Linear Regression"
-subtitle: "<br/> STAT 230"
+title: "Observations and Experiments"
+subtitle: "<br/> STAT 120"
 author: "Bastola"
 date: "`r format(Sys.Date(), ' %B %d %Y')`"
 output:
@@ -41,84 +41,53 @@ knitr::opts_chunk$set(echo = TRUE,
                       )
 
 
+
 # load necessary packages
-library(tidyr)
-library(dplyr)
-library(ggplot2)
-library(countdown)
-library(ggthemes)
+library(Sleuth3)   # Data-set for Sleuth
 library(tidyverse)
-library(stringr)
+library(countdown)
+library(mosaic)
+library(ggthemes)
 library(xaringanExtra)
+library(forcats)
+library(NHSRtheme)  # color themes, nhs
 xaringanExtra::use_panelset()
 xaringanExtra::use_tachyons()
+xaringanExtra::use_clipboard()
+xaringanExtra::use_extra_styles(
+  hover_code_line = TRUE,         #<<
+  mute_unhighlighted_code = TRUE  #<<
+)
 library(flipbookr)
-library(htmlwidgets)
-library(palmerpenguins)
-library(fontawesome)
 library(patchwork)
-library(tidymodels)
-library(mlbench)     
-library(janitor)
-library(parsnip)
-library(kknn)
-library(paletteer)
-library(corrr)
-library(scico)
-library(yardstick)
-library(probably)
-library(extrafont)
-library(cluster)    # clustering algorithms
-library(factoextra) # clustering algorithms & visualization
-library(broom)
-library(purrr)
-library(dendextend) # for comparing two dendrograms
+
+
+# Set ggplot theme
+theme_set(theme_tufte(base_size = 10))
 
 
 yt <- 0
 
-USAData <- as_tibble(USArrests, rownames = "state") %>% na.omit() %>%
-  column_to_rownames("state")
-
-
-standardize <- function(x, na.rm = FALSE) {
-  (x - mean(x, na.rm = na.rm)) / sd(x, na.rm = na.rm)
-}
-
-set.seed(233)
-
-clus_df <- tibble(
-  x1 = rnorm(n = 150, mean = rep(c(5,7,8), each = 50)),
-  x2 = rnorm(n = 150, mean = rep(c(2, 5, 1), each = 50)),
-  y = unlist(lapply(1:3, function(x) rep(as.character(x),50)))
-)
-
-
-my_df <- tibble(
-  X1 = rnorm(n = 50, mean = rep(c(1, 3), each = 25)),
-  X2 = rnorm(n = 50, mean = rep(c(1.3, 1), each = 25))
-)
-
-multi_kmeans <- tibble(k = 1:10) %>%
-  mutate(
-    model = purrr::map(k, ~ kmeans(my_df, centers = .x, nstart = 25)),
-    tot.withinss = purrr::map_dbl(model, ~ glance(.x)$tot.withinss)
-  )
-
-d2 <- dist(my_df, method = "euclidean")
-hc2 <- hclust(d2)
-
 
 ```
 
 
-```{r xaringan-themer, include = FALSE}
-# Use xaringan theme from first set
+
+```{r xaringanExtra-clipboard, echo=FALSE}
+htmltools::tagList(
+  xaringanExtra::use_clipboard(
+    button_text = "<i class=\"fa fa-clipboard\"></i>",
+    success_text = "<i class=\"fa fa-check\" style=\"color: #90BE6D\"></i>",
+    error_text = "<i class=\"fa fa-times-circle\" style=\"color: #F94144\"></i>"
+  ),
+  rmarkdown::html_dependency_font_awesome()
+)
 ```
+
 
 layout: true
   
-<!-- <div class="my-footer"><span>Bastola</span></div> -->
+<!-- <div class="my-footer"><span>Stat 230</span></div> -->
 <!-- this adds the link footer to all slides, depends on my-footer class in css-->
 
 ---
@@ -128,37 +97,439 @@ class: title-slide, middle
 background-position: 10% 90%, 100% 50%
 background-size: 160px, 100% 100%
 
-# .fancy[Simple Linear Regression]
+# .fancy[ Experiments and Observational Studies]
 
-### .fancy[Stat 230]
+### .fancy[Stat 120]
 
 `r format(Sys.Date(), ' %B %d %Y')`
 
 ---
 
+class: middle
 
+# Explanatory and Response
 
----
-class: action
+.blockquote[
+If we are using one variable to help us understand or predict values
+of another variable, we call the former the .bold[explanatory variable] and
+the latter the .bold[response variable]
+]
 
-# <i class="fa fa-pencil-square-o" style="font-size:48px;color:purple">&nbsp;Your&nbsp;Turn&nbsp;`r (yt <- yt + 1)`</i>    
-
-Please clone the repository on [clustering](https://github.com/stat220/22-clustering) to your local folder.
-
-
-
-`r countdown(minutes = 5, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
 
 
 ---
 
-class: action
-
-# <i class="fa fa-pencil-square-o" style="font-size:48px;color:purple">&nbsp;Your&nbsp;Turn&nbsp;`r (yt <- yt + 1)`</i>    
+# Association and Causation
 
 
+.blockquote[Two variables are .bold[associated] if values of one variable tends to
+be related to values of the other variable
+- e.g. .yellow-h[Families with many cars tend to own many television sets]
+]
+
+--
+<br>
+
+.blockquote[Two variables are .bold[causally associated] if changing the value of
+the explanatory variable influences the value of the response
+variable
+- e.g. .yellow-h[Studies show that taking a practice exam increases your score on an exam]
+]
+
+---
+
+# College Education and Aging
+
+.blockquote[
+.font80[
+“Education seems to be an elixir that can bring us a healthy body and mind
+throughout adulthood and even a longer life,” says Margie E. Lachman, a psychologist
+at Brandeis University who specializes in aging. “For those in midlife and beyond, a
+college degree appears to slow the brain’s aging process by up to a decade, adding a
+new twist to the cost-benefit analysis of higher education - for young students as
+well as those thinking about returning to school.”]]
+
+--
+
+Which of the following is true?
+
+.blockquote-list[
+1. Explanatory Variable = brain aging; Response Variable = elixir
+2. Explanatory Variable = brain aging; Response Variable = college
+degree
+3. Explanatory Variable = college degree; Response Variable = brain
+aging
+]
+--
+
+.footnote[A Sharper Mind, Middle Age and Beyond, NY Times, 1/19/12]
+
+---
+
+class: middle
+
+# College Education and Aging
+
+.blockquote[Based on this passage, should we conclude that obtaining a college
+degree causes a slowdown in the brain’s aging process?
+- Yes
+- No
+]
+
+---
+
+class: middle
+
+# Explanatory, Response, Causation
+
+Does the following headline imply a causal association?
+.blockquote[
+1. "Daily Exercise Improves Mental Performance"
+2. "Want to lose weight? Eat more fiber"
+3. "Cat owners tend to be more educated than dog owners"
+]
+
+---
+
+# Should you buy more TVs to live longer?
+
+<center>
+<img src="images/tv_life_expectancy.png" width="70%" height="60%"> <br>
+<a>Life expectancy Vs Number of TVs</a>
+</center>
 
 
-`r countdown(minutes = 3, seconds = 00, top = 0 , color_background = "inherit", padding = "3px 4px", font_size = "2em")`
+---
 
+class: middle
+
+# TVs and Life Expectancy
+
+<center>
+<img src="images/confounding.png" width="70%" height="60%"> <br>
+<a>Extra lurking variable</a>
+</center>
+
+---
+
+# Facebook and Greek Debt Crisis
+
+
+<center>
+<img src="images/confounding_facebook.png" width="60%" height="50%"> <br>
+</center>
+
+.footnote[https://www.bloomberg.com/news/articles/2011-12-01/correlation-or-causation]
+
+---
+
+# Global Warming and Scientists
+
+<center>
+<img src="images/confounding_globalwarming.png" width="60%" height="50%"> <br>
+</center>
+
+.footnote[https://www.bloomberg.com/news/articles/2011-12-01/correlation-or-causation]
+
+---
+
+
+# Confounding Variable
+
+.font120[
+> A third variable that is associated with both the explanatory
+variable and the response variable is called a .bold[confounding variable]
+]
+
+--
+
+.font120[
+> A confounding variable can offer a plausible explanation for an association between the two variables.
+]
+
+--
+
+.font120[
+> Whenever confounding variables are present (or may be present), a causal association .bold[CANNOT] be determined!
+]
+
+---
+
+# Experiment Vs Observational Study
+
+.font120.blockquote[
+An .out-t.bold[observational study] is a study in which the researcher does
+not actively control the value of any variable, but simply
+observes the values as they naturally exist
+]
+
+--
+<br>
+
+.font120.blockquote[
+An .out-t.bold[experiment] is a study in which the researcher actively
+controls one or more of the explanatory variables
+]
+
+---
+
+class: middle
+
+# Experiment or Observational Study?
+
+.blockquote[
+To examine whether playing music in a store increases the amount
+customers spend, we randomly assign some stores to play music and
+some to stay silent and compare the average amount spent by
+customers. Does this describe an experiment or an observational
+study?
+
+- Experiment
+- Observational Study
+]
+
+---
+
+class: middle
+
+# Experiment or Observational Study?
+
+.blockquote[
+To examine whether farm-grown salmon contain more omega-3 oils
+if water is more acidic, we collect samples of salmon and water from
+multiple fish farms to see if the two variables are related.
+
+- Experiment
+- Observational Study
+]
+
+
+---
+
+# Observational Studies and Confounding Variable
+
+.blockquote-list[
+- There are almost always confounding variables in observational
+studies
+
+- Observational studies can almost never be used to establish
+causation!!
+]
+
+--
+
+.yellow-h[To avoid confounding variables: Randomly assign values of the explanatory variable!]
+
+
+---
+
+class: middle
+
+# Randomized Experiments
+
+.blockquote-list[
+- In a .bold[randomized experiment], the explanatory variable for each
+unit is determined randomly, before the response variable is
+measured
+- The different levels of the explanatory variable are known as
+.bold[treatments]
+- Randomly divide the units into groups, and randomly assign a
+different treatment to each group
+- Observe the response variable after treatments are applied
+]
+
+---
+
+# Elimination of confounding variables
+
+<center>
+<img src="images/randomized_experiments.png" width="70%" height="60%"> <br>
+</center>
+
+--
+
+
+.out-t[Because the explanatory variable is randomly assigned, it is not associated with any other variables.  Confounding variables are eliminated!!!]
+
+---
+
+# Exercise and the Brain
+
+.blockquote-list[
+- A sample of mice were divided randomly into two groups. One
+group was given access to an exercise wheel, the other group
+was kept sedentary
+- "The brains of mice and rats that were allowed to run on wheels
+pulsed with vigorous, newly born neurons, and those animals
+then breezed through mazes and other tests of rodent IQ"
+compared to the sedentary mice
+]
+
+Is this evidence that exercise causes an increase in brain
+activity and IQ, at least in mice?
+
+--
+
+.center.out-t[Randomized experiment can yield causal conclusions!]
+
+--
+
+.footnote[Reynolds, "Phys Ed: Your Brain on Exercise", NY Times, July 7, 2010]
+
+---
+
+# Knee Surgery and Arthritis
+
+> Researchers conducted a study on the effectiveness of a knee
+surgery to cure arthritis. It was randomly determined whether
+people got the knee surgery. Everyone who underwent the
+surgery reported feeling less pain
+
+--
+
+- Is this evidence that the surgery causes a decrease in pain?
+
+--
+
+.out-t[Need a control or comparison group. What would happen without surgery?]
+
+---
+
+class: middle
+
+# Control Group
+
+.blockquote-list[
+- When determining whether a treatment is effective, it is
+important to have a comparison group, known as the .bold[control group]
+
+- All randomized experiments need either a control group, or at
+least two different treatments to compare
+]
+
+---
+
+
+# Knee Surgery for Arthritis
+
+.blockquote-list[
+- In the knee surgery study, those in the control group received a
+.bold[fake knee surgery]. They were put under and cut open, but the
+doctor did not actually perform the surgery. All of these patients
+also reported less pain!
+
+- The improvement was .bold[indistinguishable] between those receiving
+the real surgery and those receiving the fake surgery!
+]
+
+--
+
+.center.red.font140.bold[What is the reason?]
+
+--
+
+.footnote[Source: The Placebo Prescription, NY Times Magazine, 1/9/00]
+
+---
+
+class: middle
+
+# Placebo Effect
+
+
+.blockquote-list[
+- People can experience the effect they think they should be
+experiencing, even if they aren’t actually receiving the treatment
+
+- One study estimated that 75% of the effectiveness of
+anti-depressant medication is due to the .bold[placebo effect]
+
+]
+
+---
+
+
+# Can Video Games Help Teens Beat Depression?
+
+.pull-left[
+.blockquote-list[
+- $168$ teens, $2/3^{rd}$ girls
+- Half of the group was
+randomly assigned to
+treatment (video game)
+- Other half received
+traditional counseling
+]
+
+]
+.pull-right[
+<center>
+<img src="images/videogames.jpg" width="90%" height="80%"> <br>
+<a>Source: Brand X Pictures</a>
+</center>
+]
+
+--
+<br>
+<br>
+.out-t[
+44% of those who played video game recovered completely from
+depression, compared with 26% of those in regular treatment
+]
+
+.footnote[[Link](https://healthland.time.com/2012/04/20/study-playing-a-video-game-helps-teens-beat-depression/) to the article]
+
+---
+
+class: middle
+
+# Placebo and Blinding
+
+.blockquote-list[
+- Control groups are often given a .bold[placebo], a fake treatment that resembles the active treatment as much as possible
+- If possible, randomized experiments should be .bold[double-blinded:] neither the participants or the researchers evaluating participants should know which treatment the participants are actually getting
+]
+
+
+---
+
+class: middle
+
+# Types of Randomized Experiments
+
+.blockquote-list[
+- Randomizing cases into different treatment groups is called a
+.bold[randomized comparative experiment]
+- We can also give each treatment to each case, and just
+randomize the order in which treatments are received: .bold[matched pairs experiment]
+- There are other, more complicated types of randomized
+experiments (blocking, split plots, …)
+
+]
+
+---
+
+class: middle
+
+# More on Randomization
+
+.blockquote-list[
+- Doing a randomized experiment on a random sample is ideal,
+but rarely achievable. (why?)
+- If the focus of the study is using a sample to estimate a
+population parameter, you need a random sample but do not
+need a randomized experiment (example: election polling)
+- If the focus of the study is establishing causality, you need a
+randomized experiment and can settle for a non-random
+sample (example: drug testing)
+]
+
+---
+
+# Randomization in Data Collection
+
+
+<center>
+<img src="images/randomized_flowcharts.png" width="70%" height="60%"> <br>
+</center>
 
